--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,6 +36,7 @@
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="./dist/css/main.css">
 	<!-- END of LINKS-->
+	<link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 </head>
 
 <body class="profile-page">
