--- a/ethnode/webui/src/profiles.html
+++ b/ethnode/webui/src/profiles.html
@@ -1,79 +1,83 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Ethearnal - Profiles</title>
-		<link rel="stylesheet" href="styles/hcmodals.css">
-		<!-- FAVICON-->
-		<link rel="shortcut icon" type="image/png" href="images/favicon.png">
-		<!-- START of LINKS-->
-		<!-- Normalize.css-->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
-		<!-- BootstrapCSS 3.3.7-->
-		<link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
-		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-		<!-- Semantic UI CSS-->
-		<link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
-		<!-- Owl Carousel CSS-->
-		<link rel="stylesheet" href="https://bbcdn.githack.com/shahzadns/owlfonk-owlcarousel/raw/31413692812896e19db89baee9be30b9d36d1e64/owl-carousel/owl.carousel.css">
-		<!-- Bootstrap Material Date and Time Picker-->
-		<link rel="stylesheet" href="https://cdn.rawgit.com/T00rk/bootstrap-material-datetimepicker/gh-pages/css/bootstrap-material-datetimepicker.css">
-		<!-- Icons-->
-		<link rel="stylesheet" href="styles/icons.css">
-		<link rel="stylesheet" href="./assets/icons/themify-icons.css">
-		<!-- Flag icons-->
-		<link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css">
-		<!-- START of FONTS-->
-		<!-- Google Material Icons-->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<!-- Material Design Bootstrap-->
-		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-		<!-- Roboto-->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-		<!-- Montserrat-->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
-		<!-- END of FONTS-->
-		<!-- Main CSS file-->
-		<link rel="stylesheet" href="styles/main.css">
-		<link rel="stylesheet" href="./dist/css/main.css">
-	</head>
-	<body class="profiles-page">
-		//= templates/header-global.html
-		<section class="profiles-page-content">
-			<div class="container">
-				<div class="col-md-3">
-					<div class="card">
-						<div class="card-heading border bottom">
-							<h4 class="card-title">Search Profiles</h4>
-						</div>
-						<div class="filter card-body">
-							<div class="form-group">
-								<label>Search by name</label>
-								<input id="search-header" type="text" placeholder="Search by name..." class="form-control">
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="gigs col-md-9">
-					<div class="profiles-container"></div>
-				</div>
-			</div>
-		</section>
-		<!-- Modals -->
-		<div id="myModal" class="beep-modal-hc">
-			<div class="beep-modal-content-hc"></div>
-		</div>
-		//= templates/edit-profile.html
-		//= templates/add-gig-modal.html
-		//= templates/redesigned-big-gig-modal.html
-		<!--  -->
-		<!-- Vendor JS -->
-		<script src="dist/js/vendor.min.js"></script>
-		<!-- Main JS file-->
-		<script src="js/main.js"></script>
-	</body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ethearnal - Profiles</title>
+    <link rel="stylesheet" href="styles/hcmodals.css">
+    <!-- FAVICON-->
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <!-- START of LINKS-->
+    <!-- Normalize.css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
+    <!-- BootstrapCSS 3.3.7-->
+    <link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+    <!-- Semantic UI CSS-->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
+    <!-- Owl Carousel CSS-->
+    <link rel="stylesheet" href="https://bbcdn.githack.com/shahzadns/owlfonk-owlcarousel/raw/31413692812896e19db89baee9be30b9d36d1e64/owl-carousel/owl.carousel.css">
+    <!-- Bootstrap Material Date and Time Picker-->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/T00rk/bootstrap-material-datetimepicker/gh-pages/css/bootstrap-material-datetimepicker.css">
+    <!-- Icons-->
+    <link rel="stylesheet" href="styles/icons.css">
+    <link rel="stylesheet" href="./assets/icons/themify-icons.css">
+    <!-- Flag icons-->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css">
+    <!-- START of FONTS-->
+    <!-- Google Material Icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Material Design Bootstrap-->
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <!-- Roboto-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
+    <!-- Montserrat-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
+    <!-- END of FONTS-->
+    <!-- Main CSS file-->
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="./dist/css/main.css">
+</head>
+
+<body class="profiles-page">
+    //= templates/header-global.html
+    <section class="profiles-page-content">
+        <div class="container">
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-heading border bottom">
+                        <h4 class="card-title">Search Profiles</h4>
+                    </div>
+                    <div class="filter card-body">
+                        <div class="form-group">
+                            <label>Search by name</label>
+                            <input id="search-header" type="text" placeholder="Search by name..." class="form-control">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="gigs col-md-9">
+                <div class="profiles-container"></div>
+            </div>
+        </div>
+    </section>
+    <!-- Modals -->
+    <div id="myModal" class="beep-modal-hc">
+        <div class="beep-modal-content-hc"></div>
+    </div>
+    //= templates/edit-profile.html
+    //= templates/add-gig-modal.html
+    //= templates/redesigned-big-gig-modal.html
+    <!--  -->
+    <!-- Vendor JS -->
+    <script src="dist/js/vendor.min.js"></script>
+    <!-- Main JS file-->
+    <script src="js/main.js"></script>
+</body>
+
 </html>
