update for Edit modal ( waiting for API to finish)

--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -211,18 +211,14 @@
 								</div>
 								<div class="flex">
 									<div class="form-group">
-										<label>Add skills tags (limit: 10)</label>
-										<select name="skills" multiple="" class="ui fluid dropdown normal search skills-dropdown">
-											<option value="angular">Angular</option>
-											<option value="python">Python</option>
-											<option value="userexperience">User Experience</option>
+										<label>Add categories (limit: 10)</label>
+										<select name="categories" multiple="" id="categories-edit" class="ui fluid dropdown normal search skills-dropdown">
 										</select>
 									</div>
 									<div class="form-group">
-										<label>Add skills tags (limit: 10)</label>
-										<select name="languages" multiple="" class="ui fluid dropdown normal search languages-dropdown">
-											<option value="bulgarian">Bulgarian</option>
-											<option value="lithuanian">Lithuanian</option>
+										<label>Add languages (limit: 10)</label>
+										<select name="languages" multiple="" id="languages-edit" class="ui fluid dropdown normal search languages-dropdown">
+											
 										</select>
 									</div>
 								</div>
@@ -231,7 +227,7 @@
 									<input id="title" name="title" type="text" class="form-control ">
 								</div>
 								<div class="form-group full-width">
-									<label for="description">Summary</label>
+									<label for="description">Description</label>
 									<textarea id="description" type="text" rows="3" name="description" class="form-control description"></textarea>
 								</div>
 							</form>
