Update: - edit modal ( + notification service for updated) - cleaning of code - profiles changes in progress

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -17,6 +17,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
 	<!-- Croppie -->
 	<link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
+	<!-- Croppie -->
+	<link rel="stylesheet" href="styles/jquery.toast.css" />
 	<!-- START of ICONS -->
 	<link rel="stylesheet" href="styles/icons.css">
 	<link rel="stylesheet" href="./assets/icons/themify-icons.css">
