--- a/ethnode/webui/profiles.html
+++ b/ethnode/webui/profiles.html
@@ -141,12 +141,12 @@
     					</div>
     				</div>
     				<div class="modal-body">
-    					<div class="form-group full-width">
+    					<div class="form-group full-width flex-box-center">
     						<input id="input-image-profile" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
-    						<label for="input-image-profile" class="img-label" style="background-image: url('images/image-video-image-file.png');width: 100%">
+    						<label for="input-image-profile" class="img-label" style="background-image: url('images/image-video-image-file.png');">
     							<p class="add-photo-label"></p>
     						</label>
-    						<img id="input-image-profile" src="#" alt="" class="show-image empty" style="display:none;">
+    						<span id="input-image-profile" alt="" class="show-image empty" style="display:none;"></span>
     						<div id="cropper-wrap-profile" class="cropper-wrap" style="display: none;"></div>
     						<div class="btns-wrap profile">
     							<button class="btn btn-pink jsCropUploadProfile">Upload photo</button>
