--- a/ethnode/webui/src/index.html
+++ b/ethnode/webui/src/index.html
@@ -7,32 +7,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ethearnal - Home page</title>
-	<link rel="stylesheet" href="styles/hcmodals.css">
-	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
-	<!-- BootstrapCSS 3.3.7-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-	<!-- Semantic UI CSS-->
-	<link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
-	<!-- Owl Carousel CSS-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
-	<!-- Croppie -->
-	<link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
-	<!-- START of ICONS -->
-	<link rel="stylesheet" href="styles/icons.css">
-	<link rel="stylesheet" href="./assets/icons/themify-icons.css">
-	<link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<!--  -->
-	<!-- START of FONTS-->
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
-	<!-- END of FONTS-->
-	<!-- CUSTOM CSS -->
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet" href="./dist/css/main.css">
-	<!--  -->
-	<link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+	//= templates/head-section.html
 </head>
 
 <body class="gigs-page">
