--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -7,36 +7,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ethearnal - My profile</title>
-	<link rel="stylesheet" href="styles/hcmodals.css">
-	<!-- FAVICON-->
-	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
-	<!-- START of LINKS-->
-	<!-- Normalize.css-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
-	<!-- BootstrapCSS 3.3.7-->
-	<link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-	<!-- Semantic UI CSS-->
-	<link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
-	<!-- Bootstrap Material Date and Time Picker-->
-	<link rel="stylesheet" href="https://cdn.rawgit.com/T00rk/bootstrap-material-datetimepicker/gh-pages/css/bootstrap-material-datetimepicker.css">
-	<!-- Icons-->
-	<link rel="stylesheet" href="./assets/icons/themify-icons.css">
-	<!-- START of FONTS-->
-	<!-- Google Material Icons-->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<!-- Material Design Bootstrap-->
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-	<!-- Roboto-->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-	<!-- Montserrat-->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
-	<!-- END of FONTS-->
-	<!-- Main CSS file-->
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet" href="./dist/css/main.css">
-	<!-- END of LINKS-->
-	<link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+	 //= templates/head-section.html
 </head>
 
 <body class="profile-page">
