--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -265,7 +265,7 @@
 	                        <label for="input-image-gig" class="img-label" style="background-image: url('images/image-video-image-file.png');width: 100%">
 								<p class="add-photo-label"></p>
 							</label>
-	                        <img id="input-image-gig" src="#" alt="" class="show-image empty" style="display:none;">
+	                        <img id="input-image-gig" src="#" alt="" class="show-image-gig empty" style="display:none;">
 	                        <div id="cropper-wrap-gig" class="cropper-wrap" style="display: none;"></div>
 	                        <div class="btns-wrap">
 	                            <button class="btn btn-pink jsCropUpload">Upload photo</button>
