--- a/ethnode/webui/network.html
+++ b/ethnode/webui/network.html
@@ -6,38 +6,38 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ethearnal - Home page</title>
-	<link rel="stylesheet" href="styles/hcmodals.css">
-	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
-	<!-- BootstrapCSS 3.3.7-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-	<!-- Semantic UI CSS-->
-	<link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
-	<!-- Owl Carousel CSS-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
-	<!-- Croppie -->
-	<link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
-	<!-- Croppie -->
-	<link rel="stylesheet" href="styles/jquery.toast.css" />
-	<!-- START of ICONS -->
-	<link rel="stylesheet" href="styles/icons.css">
-	<link rel="stylesheet" href="./assets/icons/themify-icons.css">
-	<link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<!--  -->
-	<!-- START of FONTS-->
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
-	<!-- END of FONTS-->
-	<!-- CUSTOM CSS -->
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet" href="./dist/css/main.css">
-	<!--  -->
-	<link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+	<title>Ethearnal - My profile</title>
+	 <link rel="stylesheet" href="styles/hcmodals.css">
+	 <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+	 <!-- BootstrapCSS 3.3.7-->
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	 <!-- Semantic UI CSS-->
+	 <link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
+	 <!-- Owl Carousel CSS-->
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
+	 <!-- Croppie -->
+	 <link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
+	 <!-- Croppie -->
+	 <link rel="stylesheet" href="styles/jquery.toast.css" />
+	 <!-- START of ICONS -->
+	 <link rel="stylesheet" href="styles/icons.css">
+	 <link rel="stylesheet" href="./assets/icons/themify-icons.css">
+	 <link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css">
+	 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	 <!--  -->
+	 <!-- START of FONTS-->
+	 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
+	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
+	 <!-- END of FONTS-->
+	 <!-- CUSTOM CSS -->
+	 <link rel="stylesheet" href="styles/main.css">
+	 <link rel="stylesheet" href="./dist/css/main.css">
+	 <!--  -->
+	 <link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 </head>
 
-<body class="gigs-page">
+<body class="network-page">
 	<header class="main-header">
 		<div class="container">
 			<nav class="flex-block flex-between">
@@ -91,172 +91,88 @@
 			</div>
 		</div>
 	</div>
-	<section class="gigs-page-content home-page">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-6 col-md-4 col-lg-3 col-xs-12 col-sm-6">
-					<div class="card sidebar-fixed">
-						<div class="card-heading border bottom">
-							<h4 class="card-title">Search Gigs</h4>
-						</div>
-						<div class="filter card-body">
-							<div class="form-group">
-								<label>Search by Text</label>
-								<input id="search-header" type="text" placeholder="Search by text..." class="form-control">
-							</div>
-							<div class="form-group">
-								<label>Expertise Category</label>
-								<select id='domain-expertise-select' class="ui fluid search dropdown ui-element-style form-control flex-center">
-									<option value="all">All categories</option>
-									<option value="sd">Software Development</option>
-									<option value="fa">Finance & Accounting</option>
-									<option value="ma">Music & Audio</option>
-									<option value="va">Video & Animation</option>
-									<option value="gd">Graphic & Design</option>
-									<option value="tw">Text & Writing</option>
-									<option value="cs">Consulting Services</option>
-									<option value="os">Other Services</option>
-								</select>
-							</div>
-							<div class="form-group">
-								<label>Skills</label>
-								<select id='skills-tags' class="ui fluid search dropdown ui-element-style form-control flex-center" multiple>
-									<option value="">Select Skills</option>
-								</select>
-							</div>
-							<div class="form-group pdd-btm-20">
-								<label>Budget</label>
-								<div class="filter budget">
-									<div class="slider-wrapper">
-										<div id="slider-range"></div>
-										<div class="range-wrapper">
-											<div class="range"></div>
-											<div class="range-alert">
-												<span>+</span>
-											</div>
-											<div class="gear-wrapper">
-												<div class="gear-large gear-one">
-													<div class="gear-tooth"></div>
-													<div class="gear-tooth"></div>
-													<div class="gear-tooth"></div>
-													<div class="gear-tooth"></div>
-												</div>
-												<div class="gear-large gear-two">
-													<div class="gear-tooth"></div>
-													<div class="gear-tooth"></div>
-													<div class="gear-tooth"></div>
-													<div class="gear-tooth"></div>
-												</div>
-											</div>
-										</div>
-										<div class="marker marker-0">
-											<sup>
-												<i class="material-icons">polymer</i>
-											</sup>0</div>
-										<div class="marker marker-50">
-											<sup>
-												<i class="material-icons">polymer</i>
-											</sup>1,000</div>
-										<div class="marker marker-100">
-											<sup>
-												<i class="material-icons">polymer</i>
-											</sup>2K+</div>
-									</div>
-								</div>
+	<div class="network-page-wrap-module">
+		<section class="network-map">
+			<div id="map" tabindex="0" style="height: 100vh; width: 100%;"></div>
+		</section>
+	</div>
+	<div id="edit-profile" class="edit-profile-redesigned modal fade" role="dialog">
+		<div class="modal-dialog modal-box-content">
+			<div class="modal-content inner-modal">
+				<div class="card-heading">
+					<h4 class="card-title">Edit Profile</h4>
+					<i class="material-icons" data-dismiss="modal">highlight_off</i>
+				</div>
+				<div class="content">
+					<div class="success-message">
+						<h1 class="title">Congratulations!</h1>
+						<div class="success-content">
+							<p>Your profile has been updated.</p>
+							<div class="buttons">
+								<button class="mdl-button mdl-js-button close-button congrats-close">Close the modal to see it</button>
+								<span>OR</span>
+								<button class="mdl-button mdl-js-button create-new">Edit profile again</button>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="gigs col-md-8 col-lg-9 col-xs-12 col-sm-6">
-					<div class="gigs-container"></div>
+					<div class="modal-body">
+						<div class="form-group full-width flex-box-center">
+							<input id="input-image-profile" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
+							<label for="input-image-profile" class="img-label" style="background-image: url('images/image-video-image-file.png');">
+								<p class="add-photo-label"></p>
+							</label>
+							<span id="input-image-profile" alt="" class="show-image empty" style="display:none;"></span>
+							<div id="cropper-wrap-profile" class="cropper-wrap" style="display: none;"></div>
+							<div class="btns-wrap profile">
+								<button class="btn btn-pink jsCropUploadProfile">Upload photo</button>
+								<button style="display: none;" class="btn btn-success jsCropResultProfile">Confirm result</button>
+							</div>
+						</div>
+	
+						<div class="modal-inputs">
+							<form id="form-update-education" action="POST">
+								<div class="flex">
+									<div class="form-group">
+										<label>First Name</label>
+										<input id="first-name" name="first-name" type="text" class="form-control ">
+									</div>
+									<div class="form-group">
+										<label>Last Name</label>
+										<input id="last-name" name="last-name" type="text" class="form-control ">
+									</div>
+								</div>
+								<div class="flex">
+									<div class="form-group">
+										<label>Add skills (limit: 10)</label>
+										<select name="categories" multiple="" id="categories-edit" class="ui fluid dropdown normal search skills-dropdown">
+										</select>
+									</div>
+									<div class="form-group">
+										<label>Add languages (limit: 10)</label>
+										<select name="languages" multiple="" id="languages-edit" class="ui fluid dropdown normal search languages-dropdown">
+											
+										</select>
+									</div>
+								</div>
+								<div class="form-group full-width">
+									<label>Title</label>
+									<input id="title" name="title" type="text" class="form-control ">
+								</div>
+								<div class="form-group full-width">
+									<label for="description">Description</label>
+									<textarea id="description" type="text" rows="3" name="description" class="form-control description"></textarea>
+								</div>
+							</form>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button id="updateProfile" class="btn btn-pink finish-button">Publish</button>
+						<button class="close-button btn btn-default" data-dismiss="modal">Close</button>
+						<div data-mdl-for="publish4" class="mdl-tooltip">This text will be changed anyway.</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</section>
-
-	<!-- Modals -->
-	<div id="myModal" class="beep-modal-hc">
-		<div class="beep-modal-content-hc"></div>
-	</div>
-	<div id="gigModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" class="modal fade">
-	  <div role="document" class="modal-dialog modal-md">
-	    <div id="redesigned-modal" class="hidden">
-	      <div class="modal-content border-radius-6">
-	        <div class="modal-header pdd-horizon-30">
-	          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	          <h4 class="modal-title flex-block flex-center">
-	            <div id="new-modal-owner-avatar" class="mrg-right-15"></div>
-	            <div>
-	              <span id="new-modal-owner-name">Owner Name</span>
-	              <br>
-	              <span id="new-modal-owner-title">Owner Title</span>
-	            </div>
-	          </h4>
-	        </div>
-	        <div class="modal-body border-radius-6" style="overflow: hidden;">
-	          <div class="pdd-horizon-30">
-	            <div class="row">
-	              <div class="ml-auto col-xs-12">
-	                <h3 class="font-size-24 color-blue" id="redesigned-modal-gig-title">I'll design a smart contracts for ethereum platform</h3>
-	              </div>
-	              <div class="col-xs-12 text-center mrg-vertical-10">
-	                <div id="redesigned-modal-gig-image" style="height: 200px;"></div>
-	              </div>
-	              <p id="redesigned-modal-description" class="col-md-12 font-size-16">Let me see your identification. You don't need to see his identification. We don't need to see his identification.
-	                These are not the droids.</p>
-	            </div>
-	          </div>
-	        </div>
-	        <div class="modal-footer pdd-horizon-30">
-	          <div class="text-right">
-	            <button class="btn btn-default btn-sm no-mrg" data-dismiss="modal">
-	              Hold &nbsp;
-	              <span id="redesigned-modal-gig-price-req">0.00 </span> &nbsp;
-	              <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp; Price &nbsp;
-	              <span id="redesigned-modal-gig-price"> 0.00 </span> &nbsp; Order
-	            </button>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-	
-	<div id="redesigned-modal" class="hidden">
-	  <div class="modal-content border-radius-6 redesigned-gig-modal">
-	    <div class="modal-header pdd-horizon-30" id="redesigned-modal-gig-image" style="height: 200px;">
-	      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	    </div>
-	    <div class="modal-body pdd-vertical-10 no-mrg">
-	      <div class="pdd-horizon-30">
-	        <div class="row">
-	          <div class="col-xs-12">
-	            <h4 class="modal-title flex-block flex-center">
-	              <div id="new-modal-owner-avatar" class="mrg-right-15 pointer jsOpenGigOwnerProfile"></div>
-	              <div class="mrg-top-20">
-	                <span id="new-modal-owner-name">Owner Name</span> -
-	                <span id="new-modal-owner-title">Owner Title</span>
-	              </div>
-	            </h4>
-	            <h3 class="font-size-24 color-blue mrg-top-50 mrg-btm-10" id="redesigned-modal-gig-title">I'll design a smart contracts for ethereum platform</h3>
-	            <p id="redesigned-modal-description" class="font-size-16 mrg-btm-10">Let me see your identification. You don't need to see his identification. We don't need to see his identification.These are not the droids.</p>
-	            <p class="font-size-16 mrg-btm-10" id="redesigned-modal-gig-tags"></p>
-	          </div>
-	        </div>
-	        <div class="modal-footer no-pdd-horizon">
-	          <div class="text-right clearfix">
-	            <p class="pull-left font-size-14">
-	              Price:
-	              <span id="redesigned-modal-gig-price"> 0.00 </span>
-	              <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp;&nbsp; Lock:
-	              <span id="redesigned-modal-gig-price-req">0.00 </span>
-	            </p>
-	            <button class="btn btn-default btn-sm no-mrg btn-pink" data-dismiss="modal">Order</button>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
 	</div>
 	<div id="add-gig" class="add-gig-redesigned modal fade" role="dialog">
 	    <div class="modal-dialog modal-box-content">
@@ -370,8 +286,92 @@
 	        </div>
 	    </div>
 	</div>
+	<div id="gigModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" class="modal fade">
+	  <div role="document" class="modal-dialog modal-md">
+	    <div id="redesigned-modal" class="hidden">
+	      <div class="modal-content border-radius-6">
+	        <div class="modal-header pdd-horizon-30">
+	          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	          <h4 class="modal-title flex-block flex-center">
+	            <div id="new-modal-owner-avatar" class="mrg-right-15"></div>
+	            <div>
+	              <span id="new-modal-owner-name">Owner Name</span>
+	              <br>
+	              <span id="new-modal-owner-title">Owner Title</span>
+	            </div>
+	          </h4>
+	        </div>
+	        <div class="modal-body border-radius-6" style="overflow: hidden;">
+	          <div class="pdd-horizon-30">
+	            <div class="row">
+	              <div class="ml-auto col-xs-12">
+	                <h3 class="font-size-24 color-blue" id="redesigned-modal-gig-title">I'll design a smart contracts for ethereum platform</h3>
+	              </div>
+	              <div class="col-xs-12 text-center mrg-vertical-10">
+	                <div id="redesigned-modal-gig-image" style="height: 200px;"></div>
+	              </div>
+	              <p id="redesigned-modal-description" class="col-md-12 font-size-16">Let me see your identification. You don't need to see his identification. We don't need to see his identification.
+	                These are not the droids.</p>
+	            </div>
+	          </div>
+	        </div>
+	        <div class="modal-footer pdd-horizon-30">
+	          <div class="text-right">
+	            <button class="btn btn-default btn-sm no-mrg" data-dismiss="modal">
+	              Hold &nbsp;
+	              <span id="redesigned-modal-gig-price-req">0.00 </span> &nbsp;
+	              <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp; Price &nbsp;
+	              <span id="redesigned-modal-gig-price"> 0.00 </span> &nbsp; Order
+	            </button>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	
+	<div id="redesigned-modal" class="hidden">
+	  <div class="modal-content border-radius-6 redesigned-gig-modal">
+	    <div class="modal-header pdd-horizon-30" id="redesigned-modal-gig-image" style="height: 200px;">
+	      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	    </div>
+	    <div class="modal-body pdd-vertical-10 no-mrg">
+	      <div class="pdd-horizon-30">
+	        <div class="row">
+	          <div class="col-xs-12">
+	            <h4 class="modal-title flex-block flex-center">
+	              <div id="new-modal-owner-avatar" class="mrg-right-15 pointer jsOpenGigOwnerProfile"></div>
+	              <div class="mrg-top-20">
+	                <span id="new-modal-owner-name">Owner Name</span> -
+	                <span id="new-modal-owner-title">Owner Title</span>
+	              </div>
+	            </h4>
+	            <h3 class="font-size-24 color-blue mrg-top-50 mrg-btm-10" id="redesigned-modal-gig-title">I'll design a smart contracts for ethereum platform</h3>
+	            <p id="redesigned-modal-description" class="font-size-16 mrg-btm-10">Let me see your identification. You don't need to see his identification. We don't need to see his identification.These are not the droids.</p>
+	            <p class="font-size-16 mrg-btm-10" id="redesigned-modal-gig-tags"></p>
+	          </div>
+	        </div>
+	        <div class="modal-footer no-pdd-horizon">
+	          <div class="text-right clearfix">
+	            <p class="pull-left font-size-14">
+	              Price:
+	              <span id="redesigned-modal-gig-price"> 0.00 </span>
+	              <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp;&nbsp; Lock:
+	              <span id="redesigned-modal-gig-price-req">0.00 </span>
+	            </p>
+	            <button class="btn btn-default btn-sm no-mrg btn-pink" data-dismiss="modal">Order</button>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 	<!--  -->
 	<!-- Vendor JS -->
+	<!-- google api key: AIzaSyDlyDTrWOPUQbfgEuyDguhTLN82aIyuUmU -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlyDTrWOPUQbfgEuyDguhTLN82aIyuUmU"></script>
+	<!-- open layer -->
+	<!-- <script src="https://openlayers.org/en/v4.6.4/build/ol.js" type="text/javascript"></script> -->
 	<script src="dist/js/vendor.min.js"></script>
 	<!-- Main JS file-->
 	<script src="js/main.js"></script>
