onClick event on marker show details modal

--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -13,6 +13,7 @@
 <body class="network-page">
 	//= templates/header-global.html
 	<div class="network-page-wrap-module">
+		<a href="" data-toggle="modal" data-target="#modal-network" class="hidden"></a>
 		<section class="network-map">
 			<div id="map" tabindex="0" style="height: 100vh; width: 100%;"></div>
 		</section>
