--- a/ethnode/webui/network.html
+++ b/ethnode/webui/network.html
@@ -91,7 +91,23 @@
 			</div>
 		</div>
 	</div>
+	<div class="modal fade" id="modal-network">
+		<div class="modal-dialog modal-sm" role="document">
+			<div class="modal-content about-head-modal">
+				<div class="modal-body">
+					<div class="text-center">
+						<h3 class="ntw-country"></h3>
+						<p class="ntw-ip"></p>
+					</div>
+				</div>
+				<button data-dismiss="modal" class="btn btn-primary btn-block no-mrg no-border pdd-vertical-15 ng-scope">
+					<span class="text-uppercase">Close</span>
+				</button>
+			</div>
+		</div>
+	</div>
 	<div class="network-page-wrap-module">
+		<a href="" data-toggle="modal" data-target="#modal-network" class="hidden"></a>
 		<section class="network-map">
 			<div id="map" tabindex="0" style="height: 100vh; width: 100%;"></div>
 		</section>
