--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -18,6 +18,21 @@
 			<div id="map" tabindex="0" style="height: 100vh; width: 100%;"></div>
 		</section>
 	</div>
+	<div class="modal fade" id="modal-network">
+		<div class="modal-dialog modal-sm" role="document">
+			<div class="modal-content about-head-modal">
+				<div class="modal-body">
+					<div class="text-center">
+						<h3 class="ntw-country"></h3>
+						<p class="ntw-ip"></p>
+					</div>
+				</div>
+				<button data-dismiss="modal" class="btn btn-primary btn-block no-mrg no-border pdd-vertical-15 ng-scope">
+					<span class="text-uppercase">Close</span>
+				</button>
+			</div>
+		</div>
+	</div>
 	//= templates/edit-profile.html
 	//= templates/add-gig-modal.html
 	//= templates/redesigned-big-gig-modal.html
