has rewrite functionality using openstreet map

--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -7,6 +7,8 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ethearnal - My profile</title>
+	<!-- <link rel="stylesheet" href="https://unpkg.com/openlayers@4.6.4/dist/ol.css">
+	<link rel="stylesheet" href="https://unpkg.com/ol3-contextmenu@2.5.0/build/ol3-contextmenu.min.css"> -->
 	 //= templates/head-section.html
 </head>
 
@@ -37,11 +39,9 @@
 	//= templates/add-gig-modal.html
 	//= templates/redesigned-big-gig-modal.html
 	<!--  -->
+	<!-- open maps -->
+	<script src="//openlayers.org/en/v3.2.1/build/ol.js" type="text/javascript"></script>
 	<!-- Vendor JS -->
-	<!-- google api key: AIzaSyDlyDTrWOPUQbfgEuyDguhTLN82aIyuUmU -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlyDTrWOPUQbfgEuyDguhTLN82aIyuUmU"></script>
-	<!-- open layer -->
-	<!-- <script src="https://openlayers.org/en/v4.6.4/build/ol.js" type="text/javascript"></script> -->
 	<script src="dist/js/vendor.min.js"></script>
 	<!-- Main JS file-->
 	<script src="js/main.js"></script>
