--- a/ethnode/webui/network.html
+++ b/ethnode/webui/network.html
@@ -7,6 +7,8 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ethearnal - My profile</title>
+	<!-- <link rel="stylesheet" href="https://unpkg.com/openlayers@4.6.4/dist/ol.css">
+	<link rel="stylesheet" href="https://unpkg.com/ol3-contextmenu@2.5.0/build/ol3-contextmenu.min.css"> -->
 	 <link rel="stylesheet" href="styles/hcmodals.css">
 	 <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 	 <!-- BootstrapCSS 3.3.7-->
@@ -383,11 +385,9 @@
 	  </div>
 	</div>
 	<!--  -->
+	<!-- open maps -->
+	<script src="//openlayers.org/en/v3.2.1/build/ol.js" type="text/javascript"></script>
 	<!-- Vendor JS -->
-	<!-- google api key: AIzaSyDlyDTrWOPUQbfgEuyDguhTLN82aIyuUmU -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlyDTrWOPUQbfgEuyDguhTLN82aIyuUmU"></script>
-	<!-- open layer -->
-	<!-- <script src="https://openlayers.org/en/v4.6.4/build/ol.js" type="text/javascript"></script> -->
 	<script src="dist/js/vendor.min.js"></script>
 	<!-- Main JS file-->
 	<script src="js/main.js"></script>
