--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -45,10 +45,10 @@
 					<div class="button">
 						<button type="button" data-toggle="collapse" data-target="#navigation" aria-expanded="false" class="navbar-toggle collapsed"></button>
 					</div>
-					<a href="/ui" class=" hidden-xs"><img src="images/logo.png" alt="Ethearnal Logo"></a>
+					<a href="/ui" class=""><img src="images/logo.png" alt="Ethearnal Logo"></a>
 				</div>
 				<div id="navigation" class="collapse navbar-collapse tab-info">
-					<ul class="nav nav-tabs navbar-right hidden-xs relative dropdown">
+					<ul class="nav nav-tabs navbar-right relative dropdown">
 						<!-- <li><a href="" open-modal="#edit-profile" class="nav-link open-modal">Test</a></li> -->
 						<li class="nav-item"><a href="/ui" class="nav-link gigs">Gigs</a></li>
 						<li class="nav-item"><a href="/ui/profiles" class="nav-link profiles">Profiles</a></li>
@@ -107,7 +107,7 @@
 									<span class="item-title font-size-14">Languages:</span>
 								</div>
 								<p class="user-description font-size-16 mrg-vertical-20"></p>
-								<div>
+								<div class="edit">
 									<a href="" data-toggle="modal" data-target="#edit-profile" class="nav-link hidden open-modal btn btn-pink editBtnProfile">Edit profile</a>
 								</div>
 							</div>
@@ -131,7 +131,7 @@
 							<li role="presentation" class="timeline-li disable-state">
 								<a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Orders</a>
 							</li>
-							<li role="presentation" class="timeline-li disable-state">
+							<li role="presentation" class="timeline-li disable-state hidden-xs">
 								<a href="#archived" aria-controls="orders" role="tab" data-toggle="tab">Completed</a>
 							</li>
 							<li role="presentation" class="timeline-li disable-state">
