--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -29,7 +29,7 @@
 									<span class="item-title font-size-14">Languages:</span>
 								</div>
 								<p class="user-description font-size-16 mrg-vertical-20"></p>
-								<div>
+								<div class="edit">
 									<a href="" data-toggle="modal" data-target="#edit-profile" class="nav-link hidden open-modal btn btn-pink editBtnProfile">Edit profile</a>
 								</div>
 							</div>
@@ -53,7 +53,7 @@
 							<li role="presentation" class="timeline-li disable-state">
 								<a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Orders</a>
 							</li>
-							<li role="presentation" class="timeline-li disable-state">
+							<li role="presentation" class="timeline-li disable-state hidden-xs">
 								<a href="#archived" aria-controls="orders" role="tab" data-toggle="tab">Completed</a>
 							</li>
 							<li role="presentation" class="timeline-li disable-state">
