--- a/ethnode/webui/profiles.html
+++ b/ethnode/webui/profiles.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="gigs col-md-9">
+            <div class="gigs col-md-9 col-xs-12">
                 <div class="profiles-container"></div>
             </div>
         </div>
@@ -304,7 +304,7 @@
                     </div>
                     <div class="modal-footer">
                         <button id="addNewGigSend" class="btn btn-pink lh-normal mdl-button mdl-js-button finish-button">Publish</button>
-                        <button class="btn btn-default lh-normal close-btn mdl-button mdl-js-button close-button" data-dismiss="modal">Close</button>
+                        <button class="btn btn-default lh-normal close-btn mdl-button mdl-js-button close-button" id="addgig-close" data-dismiss="modal">Close</button>
                         <div data-mdl-for="addNewGig" class="mdl-tooltip">This text will be changed anyway.</div>
                     </div>
                 </div>
