--- a/ethnode/webui/src/profiles.html
+++ b/ethnode/webui/src/profiles.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="gigs col-md-9">
+            <div class="gigs col-md-9 col-xs-12">
                 <div class="profiles-container"></div>
             </div>
         </div>
