cursor pointer, new info, modal btns

--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -15,14 +15,14 @@
 	<div class="network-page-wrap-module">
 		<a href="" data-toggle="modal" data-target="#modal-network" class="hidden"></a>
 		<section class="network-map">
-			<div id="map" tabindex="0" style="height: 100vh; width: 100%;">
+			<div id="map" tabindex="0" style="height: 100vh; width: 100%; padding-top: 65px;">
 				<div id="tooltip" class="tooltip"></div>
 			</div>
 		</section>
 	</div>
 	<div class="modal fade" id="modal-network">
 		<div class="modal-dialog modal-sm" role="document">
-			<div class="modal-content about-head-modal">
+			<div class="modal-content cdn-details">
 				<div class="modal-body">
 					<div class="text-center">
 						<h3 class="ntw-country"></h3>
@@ -30,7 +30,7 @@
 					</div>
 				</div>
 				<div class="flex">
-					<button data-dismiss="modal" class="btn btn-primary btn-half no-mrg no-border pdd-vertical-15 ng-scope">
+					<button data-dismiss="modal" class="btn btn-pink btn-half no-mrg no-border pdd-vertical-15 ng-scope">
 						<span class="text-uppercase">Close</span>
 					</button>
 					<button id="networkSelect" class="btn btn-primary btn-half no-mrg no-border pdd-vertical-15 ng-scope">
