new update: mobile view improvements fixes global modals fixes add gig fix edit gig fix

--- a/ethnode/webui/profiles.html
+++ b/ethnode/webui/profiles.html
@@ -194,7 +194,7 @@
     				</div>
     				<div class="modal-footer">
     					<button id="updateProfile" class="btn btn-pink finish-button">Publish</button>
-    					<button class="close-button btn btn-default" data-dismiss="modal">Close</button>
+    					<button class="close-button btn btn-default"  id="edit-profile-close" data-dismiss="modal">Close</button>
     					<div data-mdl-for="publish4" class="mdl-tooltip">This text will be changed anyway.</div>
     				</div>
     			</div>
@@ -358,7 +358,7 @@
     </div>
     
     <div id="redesigned-modal" class="hidden">
-      <div class="modal-content border-radius-6 redesigned-gig-modal">
+      <div class="modal-content border-radius-6 redesigned-gig-modal scroll-y">
         <div class="modal-header pdd-horizon-30" id="redesigned-modal-gig-image" style="height: 200px;">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
