--- a/ethnode/webui/network.html
+++ b/ethnode/webui/network.html
@@ -7,34 +7,34 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ethearnal - My profile</title>
-	 <link rel="stylesheet" href="styles/hcmodals.css">
-	 <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-	 <!-- BootstrapCSS 3.3.7-->
-	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-	 <!-- Semantic UI CSS-->
-	 <link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
-	 <!-- Owl Carousel CSS-->
-	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
-	 <!-- Croppie -->
-	 <link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
-	 <!-- Croppie -->
-	 <link rel="stylesheet" href="styles/jquery.toast.css" />
-	 <!-- START of ICONS -->
-	 <link rel="stylesheet" href="styles/icons.css">
-	 <link rel="stylesheet" href="./assets/icons/themify-icons.css">
-	 <link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css">
-	 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	 <!--  -->
-	 <!-- START of FONTS-->
-	 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
-	 <!-- END of FONTS-->
-	 <!-- CUSTOM CSS -->
-	 <link rel="stylesheet" href="styles/main.css">
-	 <link rel="stylesheet" href="./dist/css/main.css">
-	 <!--  -->
-	 <link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+	<link rel="stylesheet" href="styles/hcmodals.css">
+	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
+	<!-- BootstrapCSS 3.3.7-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- Semantic UI CSS-->
+	<link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
+	<!-- Owl Carousel CSS-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
+	<!-- Croppie -->
+	<link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
+	<!-- Croppie -->
+	<link rel="stylesheet" href="styles/jquery.toast.css" />
+	<!-- START of ICONS -->
+	<link rel="stylesheet" href="styles/icons.css">
+	<link rel="stylesheet" href="./assets/icons/themify-icons.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<!--  -->
+	<!-- START of FONTS-->
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
+	<!-- END of FONTS-->
+	<!-- CUSTOM CSS -->
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="./dist/css/main.css">
+	<!--  -->
+	<link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 </head>
 
 <body class="network-page">
@@ -191,7 +191,7 @@
 					</div>
 					<div class="modal-footer">
 						<button id="updateProfile" class="btn btn-pink finish-button">Publish</button>
-						<button class="close-button btn btn-default" data-dismiss="modal">Close</button>
+						<button class="close-button btn btn-default"  id="edit-profile-close" data-dismiss="modal">Close</button>
 						<div data-mdl-for="publish4" class="mdl-tooltip">This text will be changed anyway.</div>
 					</div>
 				</div>
@@ -355,7 +355,7 @@
 	</div>
 	
 	<div id="redesigned-modal" class="hidden">
-	  <div class="modal-content border-radius-6 redesigned-gig-modal">
+	  <div class="modal-content border-radius-6 redesigned-gig-modal scroll-y">
 	    <div class="modal-header pdd-horizon-30" id="redesigned-modal-gig-image" style="height: 200px;">
 	      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 	    </div>
