modal show peers

--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -29,6 +29,7 @@
 						<p class="ntw-ip"></p>
 						<input type="hidden" id="service_url">
 					</div>
+					<div class="info-container" id="peer-list"></div>
 				</div>
 				<div class="flex">
 					<button data-dismiss="modal" class="btn btn-pink btn-half no-mrg no-border pdd-vertical-15 ng-scope">
