Update for /network page

--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -117,7 +117,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="bg-change"><img src="./dist/img/flipcam.png" /></div>	
+			<!-- <div class="bg-change"><img src="./dist/img/flipcam.png" /></div>	 -->
 		</section>
 		<!-- This section is for your whole profile, including left and right sides, profile information and etc.-->
 		<section id="my-profile-section" class="inner-profile documentation">
