--- a/ethnode/webui/src/network.html
+++ b/ethnode/webui/src/network.html
@@ -29,7 +29,10 @@
 						<p class="ntw-ip"></p>
 						<input type="hidden" id="service_url">
 					</div>
-					<div class="info-container" id="peer-list"></div>
+					<div class="info-container">
+						<div id="peer-list"></div>
+						<div id="peer-list-cdn"></div>
+					</div>
 				</div>
 				<div class="flex">
 					<button data-dismiss="modal" class="btn btn-pink btn-half no-mrg no-border pdd-vertical-15 ng-scope">
