--- a/ethnode/webui/network.html
+++ b/ethnode/webui/network.html
@@ -107,6 +107,11 @@
 					<div class="text-center">
 						<h3 class="ntw-country"></h3>
 						<p class="ntw-ip"></p>
+						<input type="hidden" id="service_url">
+					</div>
+					<div class="info-container">
+						<div id="peer-list"></div>
+						<div id="peer-list-cdn"></div>
 					</div>
 				</div>
 				<div class="flex">
